// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimateWrapper should render correctly by start animation with minimum props 1`] = `
<div
  animationStates={Object {}}
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  startAnimation={true}
>
  test
</div>
`;

exports[`AnimateWrapper should render correctly with minimum props 1`] = `
<div
  animationStates={Object {}}
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  startAnimation={false}
>
  test
</div>
`;

exports[`AnimateWrapper should render correctly with render props 1`] = `
<div
  animationStates={Object {}}
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  render={[Function]}
  startAnimation={false}
>
  what
</div>
`;

exports[`AnimateWrapper should render custome tag correctly 1`] = `
<li
  animationStates={Object {}}
  endStyle={
    Object {
      "display": "block",
    }
  }
  forwardedRef={null}
  startAnimation={false}
  tag="li"
/>
`;
